Refactor how we store deliveries.
