# api/api.pb.go
@@ -8,6 +8,7 @@ It is generated from these files:
 	api.proto
 
 It has these top-level messages:
+	LocalTime
 	Delivery
 	FetchAllRequest
 	FetchAllResponse
@@ -37,17 +38,49 @@ var _ = math.Inf
 // proto package needs to be updated.
 const _ = proto.ProtoPackageIsVersion2 // please upgrade the proto package
 
+type LocalTime struct {
+	Hour   int32 `protobuf:"varint,1,opt,name=hour" json:"hour,omitempty"`
+	Minute int32 `protobuf:"varint,2,opt,name=minute" json:"minute,omitempty"`
+	Second int32 `protobuf:"varint,3,opt,name=second" json:"second,omitempty"`
+}
+
+func (m *LocalTime) Reset()                    { *m = LocalTime{} }
+func (m *LocalTime) String() string            { return proto.CompactTextString(m) }
+func (*LocalTime) ProtoMessage()               {}
+func (*LocalTime) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{0} }
+
+func (m *LocalTime) GetHour() int32 {
+	if m != nil {
+		return m.Hour
+	}
+	return 0
+}
+
+func (m *LocalTime) GetMinute() int32 {
+	if m != nil {
+		return m.Minute
+	}
+	return 0
+}
+
+func (m *LocalTime) GetSecond() int32 {
+	if m != nil {
+		return m.Second
+	}
+	return 0
+}
+
 type Delivery struct {
 	// The date this delivery is for in YYYYMMDD.
 	Date string `protobuf:"bytes,1,opt,name=date" json:"date,omitempty"`
-	// The timestamp of the delivery.
-	Time int64 `protobuf:"varint,2,opt,name=time" json:"time,omitempty"`
+	// When the delivery took place.
+	Time *LocalTime `protobuf:"bytes,2,opt,name=time" json:"time,omitempty"`
 }
 
 func (m *Delivery) Reset()                    { *m = Delivery{} }
 func (m *Delivery) String() string            { return proto.CompactTextString(m) }
 func (*Delivery) ProtoMessage()               {}
-func (*Delivery) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{0} }
+func (*Delivery) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{1} }
 
 func (m *Delivery) GetDate() string {
 	if m != nil {
@@ -56,11 +89,11 @@ func (m *Delivery) GetDate() string {
 	return ""
 }
 
-func (m *Delivery) GetTime() int64 {
+func (m *Delivery) GetTime() *LocalTime {
 	if m != nil {
 		return m.Time
 	}
-	return 0
+	return nil
 }
 
 type FetchAllRequest struct {
@@ -69,7 +102,7 @@ type FetchAllRequest struct {
 func (m *FetchAllRequest) Reset()                    { *m = FetchAllRequest{} }
 func (m *FetchAllRequest) String() string            { return proto.CompactTextString(m) }
 func (*FetchAllRequest) ProtoMessage()               {}
-func (*FetchAllRequest) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{1} }
+func (*FetchAllRequest) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{2} }
 
 type FetchAllResponse struct {
 	Delivery []*Delivery `protobuf:"bytes,1,rep,name=delivery" json:"delivery,omitempty"`
@@ -78,7 +111,7 @@ type FetchAllResponse struct {
 func (m *FetchAllResponse) Reset()                    { *m = FetchAllResponse{} }
 func (m *FetchAllResponse) String() string            { return proto.CompactTextString(m) }
 func (*FetchAllResponse) ProtoMessage()               {}
-func (*FetchAllResponse) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{2} }
+func (*FetchAllResponse) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{3} }
 
 func (m *FetchAllResponse) GetDelivery() []*Delivery {
 	if m != nil {
@@ -88,19 +121,19 @@ func (m *FetchAllResponse) GetDelivery() []*Delivery {
 }
 
 type RecordDeliveryRequest struct {
-	Date int64 `protobuf:"varint,1,opt,name=date" json:"date,omitempty"`
+	Delivery *Delivery `protobuf:"bytes,1,opt,name=delivery" json:"delivery,omitempty"`
 }
 
 func (m *RecordDeliveryRequest) Reset()                    { *m = RecordDeliveryRequest{} }
 func (m *RecordDeliveryRequest) String() string            { return proto.CompactTextString(m) }
 func (*RecordDeliveryRequest) ProtoMessage()               {}
-func (*RecordDeliveryRequest) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{3} }
+func (*RecordDeliveryRequest) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{4} }
 
-func (m *RecordDeliveryRequest) GetDate() int64 {
+func (m *RecordDeliveryRequest) GetDelivery() *Delivery {
 	if m != nil {
-		return m.Date
+		return m.Delivery
 	}
-	return 0
+	return nil
 }
 
 type RecordDeliveryResponse struct {
@@ -109,9 +142,10 @@ type RecordDeliveryResponse struct {
 func (m *RecordDeliveryResponse) Reset()                    { *m = RecordDeliveryResponse{} }
 func (m *RecordDeliveryResponse) String() string            { return proto.CompactTextString(m) }
 func (*RecordDeliveryResponse) ProtoMessage()               {}
-func (*RecordDeliveryResponse) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{4} }
+func (*RecordDeliveryResponse) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{5} }
 
 func init() {
+	proto.RegisterType((*LocalTime)(nil), "api.LocalTime")
 	proto.RegisterType((*Delivery)(nil), "api.Delivery")
 	proto.RegisterType((*FetchAllRequest)(nil), "api.FetchAllRequest")
 	proto.RegisterType((*FetchAllResponse)(nil), "api.FetchAllResponse")
@@ -227,23 +261,26 @@ var _ApiService_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("api.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 279 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x91, 0xc1, 0x4a, 0xc3, 0x40,
-	0x10, 0x86, 0x49, 0x23, 0x92, 0x8e, 0xd6, 0xea, 0x60, 0x24, 0x44, 0x0f, 0x61, 0x4f, 0x11, 0xb1,
-	0xc1, 0x78, 0xf6, 0x50, 0x10, 0x8f, 0x1e, 0xe2, 0xd9, 0xc3, 0x9a, 0x8c, 0x75, 0x61, 0xcd, 0xae,
-	0xc9, 0x1a, 0xf0, 0xea, 0x2b, 0xf8, 0x38, 0x3e, 0x86, 0xaf, 0xe0, 0x83, 0x48, 0x76, 0xdb, 0x4a,
-	0x43, 0x6f, 0xc3, 0xfc, 0xb3, 0xff, 0xf7, 0xc1, 0xc2, 0x98, 0x6b, 0x31, 0xd3, 0x8d, 0x32, 0x0a,
-	0x7d, 0xae, 0x45, 0x7c, 0xb6, 0x50, 0x6a, 0x21, 0x29, 0xe3, 0x5a, 0x64, 0xbc, 0xae, 0x95, 0xe1,
-	0x46, 0xa8, 0xba, 0x75, 0x27, 0x2c, 0x87, 0xe0, 0x96, 0xa4, 0xe8, 0xa8, 0xf9, 0x40, 0x84, 0x9d,
-	0x8a, 0x1b, 0x8a, 0xbc, 0xc4, 0x4b, 0xc7, 0x85, 0x9d, 0xfb, 0x9d, 0x11, 0xaf, 0x14, 0x8d, 0x12,
-	0x2f, 0xf5, 0x0b, 0x3b, 0xb3, 0x23, 0x98, 0xde, 0x91, 0x29, 0x5f, 0xe6, 0x52, 0x16, 0xf4, 0xf6,
-	0x4e, 0xad, 0x61, 0x37, 0x70, 0xf8, 0xbf, 0x6a, 0xb5, 0xaa, 0x5b, 0xc2, 0x73, 0x08, 0xaa, 0x65,
-	0x75, 0xe4, 0x25, 0x7e, 0xba, 0x97, 0x4f, 0x66, 0xbd, 0xdb, 0x8a, 0x57, 0xac, 0x63, 0x76, 0x01,
-	0x61, 0x41, 0xa5, 0x6a, 0xaa, 0x75, 0xe6, 0x7a, 0x37, 0x94, 0x7c, 0xa7, 0xc4, 0x22, 0x38, 0x19,
-	0x1e, 0x3b, 0x62, 0xfe, 0xed, 0x01, 0xcc, 0xb5, 0x78, 0xa0, 0xa6, 0x13, 0x25, 0xe1, 0x3d, 0x04,
-	0x2b, 0x29, 0x3c, 0xb6, 0xe8, 0x81, 0x76, 0x1c, 0x0e, 0xb6, 0xae, 0x87, 0x85, 0x9f, 0x3f, 0xbf,
-	0x5f, 0xa3, 0x29, 0x4e, 0xb2, 0xee, 0x2a, 0x7b, 0xee, 0xd3, 0x4b, 0x2e, 0x25, 0x3e, 0xc2, 0xc1,
-	0x26, 0x18, 0x63, 0xfb, 0x7e, 0xab, 0x7a, 0x7c, 0xba, 0x35, 0x5b, 0x12, 0xd0, 0x12, 0xf6, 0x11,
-	0x7a, 0x42, 0x63, 0x6f, 0x9e, 0x76, 0xed, 0x8f, 0x5c, 0xff, 0x05, 0x00, 0x00, 0xff, 0xff, 0x58,
-	0xe5, 0xad, 0x2b, 0xc1, 0x01, 0x00, 0x00,
+	// 329 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x92, 0xc1, 0x4e, 0xf2, 0x40,
+	0x14, 0x85, 0x53, 0xe0, 0x27, 0x70, 0xf9, 0x01, 0xbd, 0x11, 0xd2, 0x54, 0x17, 0x64, 0x56, 0xb8,
+	0x90, 0x46, 0x5c, 0xbb, 0x80, 0x18, 0x57, 0x46, 0x93, 0xea, 0xd6, 0xc5, 0xd8, 0x5e, 0x61, 0x92,
+	0xa1, 0x53, 0xa7, 0x03, 0x89, 0x5b, 0x5f, 0xc1, 0xc7, 0xf1, 0x31, 0x7c, 0x05, 0x1f, 0xc4, 0x74,
+	0x06, 0x6a, 0x6c, 0x88, 0xbb, 0xb9, 0xe7, 0xdc, 0x7e, 0xe7, 0xdc, 0xa4, 0xd0, 0xe6, 0x99, 0x98,
+	0x64, 0x5a, 0x19, 0x85, 0x75, 0x9e, 0x89, 0xe0, 0x64, 0xa1, 0xd4, 0x42, 0x52, 0xc8, 0x33, 0x11,
+	0xf2, 0x34, 0x55, 0x86, 0x1b, 0xa1, 0xd2, 0xdc, 0xad, 0xb0, 0x3b, 0x68, 0xdf, 0xa8, 0x98, 0xcb,
+	0x07, 0xb1, 0x22, 0x44, 0x68, 0x2c, 0xd5, 0x5a, 0xfb, 0xde, 0xc8, 0x1b, 0xff, 0x8b, 0xec, 0x1b,
+	0x87, 0xd0, 0x5c, 0x89, 0x74, 0x6d, 0xc8, 0xaf, 0x59, 0x75, 0x3b, 0x15, 0x7a, 0x4e, 0xb1, 0x4a,
+	0x13, 0xbf, 0xee, 0x74, 0x37, 0xb1, 0x39, 0xb4, 0xae, 0x48, 0x8a, 0x0d, 0xe9, 0xd7, 0x82, 0x97,
+	0x70, 0x43, 0x96, 0xd7, 0x8e, 0xec, 0x1b, 0x19, 0x34, 0x8c, 0x58, 0x39, 0x5a, 0x67, 0xda, 0x9b,
+	0x14, 0x6d, 0xcb, 0x06, 0x91, 0xf5, 0xd8, 0x21, 0xf4, 0xaf, 0xc9, 0xc4, 0xcb, 0x99, 0x94, 0x11,
+	0xbd, 0xac, 0x29, 0x37, 0xec, 0x12, 0x0e, 0x7e, 0xa4, 0x3c, 0x53, 0x69, 0x4e, 0x78, 0x0a, 0xad,
+	0x64, 0x1b, 0xe5, 0x7b, 0xa3, 0xfa, 0xb8, 0x33, 0xed, 0x5a, 0xdc, 0x2e, 0x3f, 0x2a, 0x6d, 0x36,
+	0x87, 0x41, 0x44, 0xb1, 0xd2, 0x49, 0xe9, 0x39, 0x6e, 0x85, 0xe1, 0xfd, 0xc5, 0xf0, 0x61, 0x58,
+	0x65, 0xb8, 0x22, 0xd3, 0x0f, 0x0f, 0x60, 0x96, 0x89, 0x7b, 0xd2, 0x1b, 0x11, 0x13, 0xde, 0x42,
+	0x6b, 0xd7, 0x15, 0x8f, 0x2c, 0xad, 0x72, 0x4d, 0x30, 0xa8, 0xa8, 0x8e, 0xc3, 0x06, 0x6f, 0x9f,
+	0x5f, 0xef, 0xb5, 0x3e, 0x76, 0xc3, 0xcd, 0x79, 0xf8, 0x5c, 0xb8, 0x67, 0x5c, 0x4a, 0x7c, 0x84,
+	0xde, 0xef, 0x60, 0x0c, 0xec, 0xf7, 0x7b, 0x2f, 0x0a, 0x8e, 0xf7, 0x7a, 0xdb, 0x04, 0xb4, 0x09,
+	0xff, 0x11, 0x8a, 0x04, 0x6d, 0x77, 0x9e, 0x9a, 0xf6, 0x4f, 0xb8, 0xf8, 0x0e, 0x00, 0x00, 0xff,
+	0xff, 0xf2, 0x81, 0xcb, 0x88, 0x39, 0x02, 0x00, 0x00,
 }
